Fixing responsiveness for larger screens. Still need to work on mobile.

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body,html {
   align-items: center;
 }
 
+
 .flex {
   display: flex;
   flex-direction: row;
@@ -33,13 +34,18 @@ img.puff1 {
 }
 
 #puffs {
-  margin-top: 600px;
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
 }
 
 .banner {
   position: absolute;
-  top: 100px; 
-  left: 100px; 
+  top: 100px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 /* Style the curtains */
@@ -75,7 +81,11 @@ img.puff1 {
 
 /* Styling for the ticket button */
 #start-show-button {
-  position: absolute;
+  
+  bottom: 50px;
+  left: 35%;
+  
+  display: flex;
   z-index: 3; 
   transition: all 0.3s ease-in-out;
 }
@@ -86,6 +96,7 @@ img.puff1 {
 
 /* Styling for puffs */
 .puff1 {
-  z-index: 1; 
+  z-index: 1;
+ 
 }
 
